[gd_scene load_steps=7 format=4 uid="uid://g3qon6c7xytj"]

[ext_resource type="Script" path="res://projection_quad/projection_quad_2d.gd" id="1_0yffn"]
[ext_resource type="Texture2D" uid="uid://wd4e6vyklh4o" path="res://content/texture/uv_grid.webp" id="1_he6u2"]
[ext_resource type="Script" path="res://projection_quad/clickable_poly2D.gd" id="3_op5qt"]
[ext_resource type="Script" path="res://projection_quad/outliner_2d.gd" id="3_re6rk"]

[sub_resource type="ArrayMesh" id="ArrayMesh_rbku0"]
_surfaces = [{
"aabb": AABB(-100, -100, 0, 200, 200, 1e-05),
"attribute_data": PackedByteArray("AAAAAAAAAACrqio+AAAAAKuqqj4AAAAAAAAAPwAAAACrqio/AAAAAFVVVT8AAAAAAACAPwAAAAAAAAAAq6oqPquqKj6rqio+q6qqPquqKj4AAAA/q6oqPquqKj+rqio+VVVVP6uqKj4AAIA/q6oqPgAAAACrqqo+q6oqPquqqj6rqqo+q6qqPgAAAD+rqqo+q6oqP6uqqj5VVVU/q6qqPgAAgD+rqqo+AAAAAAAAAD+rqio+AAAAP6uqqj4AAAA/AAAAPwAAAD+rqio/AAAAP1VVVT8AAAA/AACAPwAAAD8AAAAAq6oqP6uqKj6rqio/q6qqPquqKj8AAAA/q6oqP6uqKj+rqio/VVVVP6uqKj8AAIA/q6oqPwAAAABVVVU/q6oqPlVVVT+rqqo+VVVVPwAAAD9VVVU/q6oqP1VVVT9VVVU/VVVVPwAAgD9VVVU/AAAAAAAAgD+rqio+AACAP6uqqj4AAIA/AAAAPwAAgD+rqio/AACAP1VVVT8AAIA/AACAPwAAgD8="),
"format": 34359742481,
"index_count": 216,
"index_data": PackedByteArray("AAABAAcAAQAIAAcAAQACAAgAAgAJAAgAAgADAAkAAwAKAAkAAwAEAAoABAALAAoABAAFAAsABQAMAAsABQAGAAwABgANAAwABwAIAA4ACAAPAA4ACAAJAA8ACQAQAA8ACQAKABAACgARABAACgALABEACwASABEACwAMABIADAATABIADAANABMADQAUABMADgAPABUADwAWABUADwAQABYAEAAXABYAEAARABcAEQAYABcAEQASABgAEgAZABgAEgATABkAEwAaABkAEwAUABoAFAAbABoAFQAWABwAFgAdABwAFgAXAB0AFwAeAB0AFwAYAB4AGAAfAB4AGAAZAB8AGQAgAB8AGQAaACAAGgAhACAAGgAbACEAGwAiACEAHAAdACMAHQAkACMAHQAeACQAHgAlACQAHgAfACUAHwAmACUAHwAgACYAIAAnACYAIAAhACcAIQAoACcAIQAiACgAIgApACgAIwAkACoAJAArACoAJAAlACsAJQAsACsAJQAmACwAJgAtACwAJgAnAC0AJwAuAC0AJwAoAC4AKAAvAC4AKAApAC8AKQAwAC8A"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 49,
"vertex_data": PackedByteArray("AADIwgAAyMIAAAAAVVWFwgAAyMIAAAAAVFUFwgAAyMIAAAAAAAAAAAAAyMIAAAAAWFUFQgAAyMIAAAAAVFWFQgAAyMIAAAAAAADIQgAAyMIAAAAAAADIwlVVhcIAAAAAVVWFwlVVhcIAAAAAVFUFwlVVhcIAAAAAAAAAAFVVhcIAAAAAWFUFQlVVhcIAAAAAVFWFQlVVhcIAAAAAAADIQlVVhcIAAAAAAADIwlRVBcIAAAAAVVWFwlRVBcIAAAAAVFUFwlRVBcIAAAAAAAAAAFRVBcIAAAAAWFUFQlRVBcIAAAAAVFWFQlRVBcIAAAAAAADIQlRVBcIAAAAAAADIwgAAAAAAAAAAVVWFwgAAAAAAAAAAVFUFwgAAAAAAAAAAAAAAAAAAAAAAAAAAWFUFQgAAAAAAAAAAVFWFQgAAAAAAAAAAAADIQgAAAAAAAAAAAADIwlhVBUIAAAAAVVWFwlhVBUIAAAAAVFUFwlhVBUIAAAAAAAAAAFhVBUIAAAAAWFUFQlhVBUIAAAAAVFWFQlhVBUIAAAAAAADIQlhVBUIAAAAAAADIwlRVhUIAAAAAVVWFwlRVhUIAAAAAVFUFwlRVhUIAAAAAAAAAAFRVhUIAAAAAWFUFQlRVhUIAAAAAVFWFQlRVhUIAAAAAAADIQlRVhUIAAAAAAADIwgAAyEIAAAAAVVWFwgAAyEIAAAAAVFUFwgAAyEIAAAAAAAAAAAAAyEIAAAAAWFUFQgAAyEIAAAAAVFWFQgAAyEIAAAAAAADIQgAAyEIAAAAA")
}]

[sub_resource type="LabelSettings" id="LabelSettings_5mgv5"]
font_size = 12
font_color = Color(1, 1, 0.411765, 1)
shadow_color = Color(0.114897, 0.114897, 0.114897, 0.666667)

[node name="projection_quad_2d" type="MeshInstance2D"]
visibility_layer = 3
mesh = SubResource("ArrayMesh_rbku0")
texture = ExtResource("1_he6u2")
script = ExtResource("1_0yffn")
subdivision_resolution = Vector2i(10, 10)

[node name="Label" type="Label" parent="."]
visible = false
visibility_layer = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -8.5
offset_right = 15.0
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
text = "projection_quad_2d"
label_settings = SubResource("LabelSettings_5mgv5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="clickable_face" type="Polygon2D" parent="."]
visible = false
visibility_layer = 2
color = Color(1, 1, 0.411765, 0.196078)
invert_border = 4.0
polygon = PackedVector2Array(-100, -100, 100, -100, 100, 100, -100, 100)
script = ExtResource("3_op5qt")

[node name="outline" type="Line2D" parent="."]
visibility_layer = 2
z_index = 69
points = PackedVector2Array(-100, -100, 100, -100, 100, 100, -100, 100)
closed = true
width = 1.0
script = ExtResource("3_re6rk")
color_highlight = Color(1, 1, 0.411765, 1)
color_normal = Color(0.560784, 0.560784, 0.560784, 1)
behavior = 1

[node name="SubViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
own_world_3d = true

[node name="TransitionViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
own_world_3d = true
render_target_update_mode = 0

[node name="handle_0" type="Polygon2D" parent="."]
visible = false
visibility_layer = 2
z_index = 69
position = Vector2(-100, -100)
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
script = ExtResource("3_op5qt")
color_highlight = Color(1, 1, 0.411765, 1)
color_normal = Color(0.560784, 0.560784, 0.560784, 1)
behavior = 1

[node name="handle_1" type="Polygon2D" parent="."]
visibility_layer = 2
z_index = 69
position = Vector2(100, -100)
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
script = ExtResource("3_op5qt")
color_highlight = Color(1, 1, 0.411765, 1)
color_normal = Color(0.560784, 0.560784, 0.560784, 1)
behavior = 1

[node name="handle_2" type="Polygon2D" parent="."]
visibility_layer = 2
z_index = 69
position = Vector2(-100, 100)
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
script = ExtResource("3_op5qt")
color_highlight = Color(1, 1, 0.411765, 1)
color_normal = Color(0.560784, 0.560784, 0.560784, 1)
behavior = 1

[node name="handle_3" type="Polygon2D" parent="."]
visibility_layer = 2
z_index = 69
position = Vector2(100, 100)
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
script = ExtResource("3_op5qt")
color_highlight = Color(1, 1, 0.411765, 1)
color_normal = Color(0.560784, 0.560784, 0.560784, 1)
behavior = 1

[connection signal="clicked" from="clickable_face" to="." method="_on_face_selector_clicked"]
